<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key">stocks</string>


    <string name="pref_display_mode_key">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key">absolute</string>
    <string name="pref_display_mode_percentage_key">percentage</string>

    <string name="default_stocks_yahoo">YHOO</string>
    <string name="default_stocks_apple">AAPL</string>
    <string name="default_stocks_microsoft">MSFT</string>
    <string name="default_stocks_facebook">FB</string>


    <string name="action_change_units">@string/pref_display_mode_key</string>


    <string name="display_mode_absolute_content_decription">Setting absolute display mode</string>
    <string name="display_mode_percentage_content_decription">Setting percentage display mode</string>
    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_cancel_content_description">Close stock adding dialog</string>

    <string name="dialog_add">Add</string>
    <string name="dialog_add_content_description">Add a new stock into observe list</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="incorrect_stock_code">The stock code is incorrect. Check your data and try again.</string>
    <string name="stock_list_empty">Cannot load stocks. Check your connectivity!</string>

</resources>
