<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_hint"
        android:inputType="textCapCharacters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/positive_button"
            android:text="@string/dialog_add"
            android:contentDescription="@string/dialog_add_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/negative_button"
            android:text="@string/dialog_cancel"
            android:contentDescription="@string/dialog_cancel_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>


</LinearLayout>
